# NUX-AGI

./: .gitignore  README.md
 orchestrator/: pyproject.toml  requirements.txt
orchestrator/: mcp_config.example.json  pyproject.toml  requirements.txt
orchestrator/src/: cli.py  main.py  orchestrator.py
orchestrator/src/agents/: __init__.py  base.py  lambda_.py  omega.py  sigma.py
orchestrator/src/core/: models.py
orchestrator/src/services/: claude_client.py  database.py  llm_gateway.py  mcp_context.py
orchestrator/tests/: run_models_quick.py
